ass final/src/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> start
Rule 1     start -> SourceFile
Rule 2     Type -> TypeName
Rule 3     Type -> TypeLit
Rule 4     Type -> LPAREN Type RPAREN
Rule 5     TypeName -> TypeToken
Rule 6     TypeName -> QualifiedIdent
Rule 7     TypeToken -> INT_T
Rule 8     TypeToken -> FLOAT_T
Rule 9     TypeToken -> UINT_T
Rule 10    TypeToken -> COMPLEX_T
Rule 11    TypeToken -> RUNE_T
Rule 12    TypeToken -> BOOL_T
Rule 13    TypeToken -> STRING_T
Rule 14    TypeToken -> TYPE IDENTIFIER
Rule 15    TypeLit -> ArrayType
Rule 16    TypeLit -> StructType
Rule 17    TypeLit -> PointerType
Rule 18    TypeOpt -> Type
Rule 19    TypeOpt -> epsilon
Rule 20    ArrayType -> LSQUARE ArrayLength RSQUARE ElementType
Rule 21    ArrayLength -> Expression
Rule 22    ElementType -> Type
Rule 23    StructType -> CreateFuncScope STRUCT LCURL FieldDeclRep RCURL EndScope
Rule 24    FieldDeclRep -> FieldDeclRep FieldDecl SEMICOLON
Rule 25    FieldDeclRep -> epsilon
Rule 26    FieldDecl -> IdentifierList Type
Rule 27    PointerType -> STAR BaseType
Rule 28    BaseType -> Type
Rule 29    Signature -> Parameters TypeOpt
Rule 30    Parameters -> LPAREN ParameterListOpt RPAREN
Rule 31    ParameterListOpt -> ParametersList
Rule 32    ParameterListOpt -> epsilon
Rule 33    ParametersList -> ParameterDecl
Rule 34    ParametersList -> ParameterDeclCommaRep
Rule 35    ParameterDeclCommaRep -> ParameterDeclCommaRep COMMA ParameterDecl
Rule 36    ParameterDeclCommaRep -> ParameterDecl COMMA ParameterDecl
Rule 37    ParameterDecl -> IdentifierList Type
Rule 38    ParameterDecl -> Type
Rule 39    Block -> LCURL StatementList RCURL
Rule 40    StatementList -> StatementRep
Rule 41    StatementRep -> StatementRep Statement SEMICOLON
Rule 42    StatementRep -> epsilon
Rule 43    Declaration -> ConstDecl
Rule 44    Declaration -> TypeDecl
Rule 45    Declaration -> VarDecl
Rule 46    TopLevelDecl -> Declaration
Rule 47    TopLevelDecl -> FunctionDecl
Rule 48    ConstDecl -> CONST ConstSpec
Rule 49    ConstDecl -> CONST LPAREN ConstSpecRep RPAREN
Rule 50    ConstSpecRep -> ConstSpecRep ConstSpec SEMICOLON
Rule 51    ConstSpecRep -> epsilon
Rule 52    ConstSpec -> IdentifierList Type ASSIGN ExpressionList
Rule 53    IdentifierList -> IDENTIFIER IdentifierRep
Rule 54    IdentifierRep -> IdentifierRep COMMA IDENTIFIER
Rule 55    IdentifierRep -> epsilon
Rule 56    ExpressionList -> Expression ExpressionRep
Rule 57    ExpressionRep -> ExpressionRep COMMA Expression
Rule 58    ExpressionRep -> epsilon
Rule 59    TypeDecl -> TYPE TypeSpec
Rule 60    TypeDecl -> TYPE LPAREN TypeSpecRep RPAREN
Rule 61    TypeSpecRep -> TypeSpecRep TypeSpec SEMICOLON
Rule 62    TypeSpecRep -> epsilon
Rule 63    TypeSpec -> TypeDef
Rule 64    TypeDef -> IDENTIFIER Type
Rule 65    VarDecl -> VAR VarSpec
Rule 66    VarDecl -> VAR LPAREN VarSpecRep RPAREN
Rule 67    VarSpecRep -> VarSpecRep VarSpec SEMICOLON
Rule 68    VarSpecRep -> epsilon
Rule 69    VarSpec -> IdentifierList Type ExpressionListOpt
Rule 70    VarSpec -> IdentifierList ASSIGN ExpressionList
Rule 71    ExpressionListOpt -> ASSIGN ExpressionList
Rule 72    ExpressionListOpt -> epsilon
Rule 73    ShortVarDecl -> IDENTIFIER QUICK_ASSIGN Expression
Rule 74    FunctionDecl -> FUNC FunctionName CreateScope Function EndScope
Rule 75    FunctionDecl -> FUNC FunctionName CreateScope Signature EndScope
Rule 76    CreateFuncScope -> <empty>
Rule 77    CreateScope -> <empty>
Rule 78    EndScope -> <empty>
Rule 79    FunctionName -> IDENTIFIER
Rule 80    Function -> Signature funMark FunctionBody
Rule 81    funMark -> <empty>
Rule 82    FunctionBody -> Block
Rule 83    Operand -> Literal
Rule 84    Operand -> OperandName
Rule 85    Operand -> LPAREN Expression RPAREN
Rule 86    Literal -> BasicLit
Rule 87    BasicLit -> I INTEGER
Rule 88    BasicLit -> I OCTAL
Rule 89    BasicLit -> I HEX
Rule 90    BasicLit -> F FLOAT
Rule 91    BasicLit -> C IMAGINARY
Rule 92    BasicLit -> R RUNE
Rule 93    BasicLit -> S STRING
Rule 94    I -> <empty>
Rule 95    R -> <empty>
Rule 96    F -> <empty>
Rule 97    C -> <empty>
Rule 98    S -> <empty>
Rule 99    OperandName -> IDENTIFIER
Rule 100   QualifiedIdent -> IDENTIFIER DOT TypeName
Rule 101   PrimaryExpr -> Operand
Rule 102   PrimaryExpr -> PrimaryExpr Selector
Rule 103   PrimaryExpr -> Conversion
Rule 104   PrimaryExpr -> PrimaryExpr LSQUARE Expression RSQUARE
Rule 105   PrimaryExpr -> PrimaryExpr Slice
Rule 106   PrimaryExpr -> PrimaryExpr TypeAssertion
Rule 107   PrimaryExpr -> PrimaryExpr LPAREN ExpressionListTypeOpt RPAREN
Rule 108   Selector -> DOT IDENTIFIER
Rule 109   Slice -> LSQUARE ExpressionOpt COLON ExpressionOpt RSQUARE
Rule 110   Slice -> LSQUARE ExpressionOpt COLON Expression COLON Expression RSQUARE
Rule 111   TypeAssertion -> DOT LPAREN Type RPAREN
Rule 112   ExpressionListTypeOpt -> ExpressionList
Rule 113   ExpressionListTypeOpt -> epsilon
Rule 114   Expression -> UnaryExpr
Rule 115   Expression -> Expression LOGICAL_OR Expression
Rule 116   Expression -> Expression LOGICAL_AND Expression
Rule 117   Expression -> Expression EQUALS Expression
Rule 118   Expression -> Expression NOT_ASSIGN Expression
Rule 119   Expression -> Expression LESSER Expression
Rule 120   Expression -> Expression GREATER Expression
Rule 121   Expression -> Expression LESS_EQUALS Expression
Rule 122   Expression -> Expression MORE_EQUALS Expression
Rule 123   Expression -> Expression OR Expression
Rule 124   Expression -> Expression XOR Expression
Rule 125   Expression -> Expression DIVIDE Expression
Rule 126   Expression -> Expression MOD Expression
Rule 127   Expression -> Expression LSHIFT Expression
Rule 128   Expression -> Expression RSHIFT Expression
Rule 129   Expression -> Expression PLUS Expression
Rule 130   Expression -> Expression MINUS Expression
Rule 131   Expression -> Expression STAR Expression
Rule 132   Expression -> Expression AND Expression
Rule 133   ExpressionOpt -> Expression
Rule 134   ExpressionOpt -> epsilon
Rule 135   UnaryExpr -> PrimaryExpr
Rule 136   UnaryExpr -> UnaryOp UnaryExpr
Rule 137   UnaryExpr -> NOT UnaryExpr
Rule 138   UnaryOp -> PLUS
Rule 139   UnaryOp -> MINUS
Rule 140   UnaryOp -> STAR
Rule 141   UnaryOp -> AND
Rule 142   Conversion -> TYPECAST Type LPAREN Expression RPAREN
Rule 143   Statement -> Declaration
Rule 144   Statement -> LabeledStmt
Rule 145   Statement -> SimpleStmt
Rule 146   Statement -> ReturnStmt
Rule 147   Statement -> BreakStmt
Rule 148   Statement -> ContinueStmt
Rule 149   Statement -> GotoStmt
Rule 150   Statement -> CreateScope Block EndScope
Rule 151   Statement -> IfStmt
Rule 152   Statement -> SwitchStmt
Rule 153   Statement -> ForStmt
Rule 154   Statement -> PrintStmt
Rule 155   Statement -> ScanStmt
Rule 156   PrintStmt -> PRINT PD Expression
Rule 157   PrintStmt -> PRINT PS Expression
Rule 158   ScanStmt -> SCAN Expression
Rule 159   SimpleStmt -> epsilon
Rule 160   SimpleStmt -> ExpressionStmt
Rule 161   SimpleStmt -> IncDecStmt
Rule 162   SimpleStmt -> Assignment
Rule 163   SimpleStmt -> ShortVarDecl
Rule 164   LabeledStmt -> Label COLON Statement
Rule 165   Label -> IDENTIFIER
Rule 166   ExpressionStmt -> Expression
Rule 167   IncDecStmt -> Expression INCR
Rule 168   IncDecStmt -> Expression DECR
Rule 169   Assignment -> ExpressionList assign_op ExpressionList
Rule 170   assign_op -> AssignOp
Rule 171   AssignOp -> PLUS_ASSIGN
Rule 172   AssignOp -> MINUS_ASSIGN
Rule 173   AssignOp -> STAR_ASSIGN
Rule 174   AssignOp -> DIVIDE_ASSIGN
Rule 175   AssignOp -> MOD_ASSIGN
Rule 176   AssignOp -> AND_ASSIGN
Rule 177   AssignOp -> OR_ASSIGN
Rule 178   AssignOp -> XOR_ASSIGN
Rule 179   AssignOp -> LSHIFT_ASSIGN
Rule 180   AssignOp -> RSHIFT_ASSIGN
Rule 181   AssignOp -> ASSIGN
Rule 182   IfStmt -> IF Expression CreateScope Block EndScope ElseOpt
Rule 183   ElseOpt -> ELSE IfStmt
Rule 184   ElseOpt -> ELSE CreateScope Block EndScope
Rule 185   ElseOpt -> epsilon
Rule 186   SwitchStmt -> ExprSwitchStmt
Rule 187   ExprSwitchStmt -> SWITCH Expression CreateScope LCURL StartSwitch ExprCaseClauseRep RCURL EndScope
Rule 188   StartSwitch -> <empty>
Rule 189   ExprCaseClauseRep -> ExprCaseClauseRep ExprCaseClause
Rule 190   ExprCaseClauseRep -> epsilon
Rule 191   ExprCaseClause -> ExprSwitchCase COLON StatementList
Rule 192   ExprSwitchCase -> CASE Expression
Rule 193   ExprSwitchCase -> DEFAULT
Rule 194   ForStmt -> FOR CreateScope ConditionBlockOpt Block EndScope
Rule 195   ConditionBlockOpt -> epsilon
Rule 196   ConditionBlockOpt -> Condition
Rule 197   ConditionBlockOpt -> ForClause
Rule 198   Condition -> Expression
Rule 199   ForClause -> SimpleStmt SEMICOLON ConditionOpt SEMICOLON SimpleStmt
Rule 200   ConditionOpt -> epsilon
Rule 201   ConditionOpt -> Condition
Rule 202   ReturnStmt -> RETURN ExpressionPureOpt
Rule 203   ExpressionPureOpt -> Expression
Rule 204   ExpressionPureOpt -> epsilon
Rule 205   BreakStmt -> BREAK LabelOpt
Rule 206   ContinueStmt -> CONTINUE LabelOpt
Rule 207   LabelOpt -> Label
Rule 208   LabelOpt -> epsilon
Rule 209   GotoStmt -> GOTO Label
Rule 210   SourceFile -> PackageClause SEMICOLON ImportDeclRep TopLevelDeclRep
Rule 211   ImportDeclRep -> epsilon
Rule 212   ImportDeclRep -> ImportDeclRep ImportDecl SEMICOLON
Rule 213   TopLevelDeclRep -> TopLevelDeclRep TopLevelDecl SEMICOLON
Rule 214   TopLevelDeclRep -> epsilon
Rule 215   PackageClause -> PACKAGE PackageName
Rule 216   PackageName -> IDENTIFIER
Rule 217   ImportDecl -> IMPORT ImportSpec
Rule 218   ImportDecl -> IMPORT LPAREN ImportSpecRep RPAREN
Rule 219   ImportSpecRep -> ImportSpecRep ImportSpec SEMICOLON
Rule 220   ImportSpecRep -> epsilon
Rule 221   ImportSpec -> PackageNameDotOpt ImportPath
Rule 222   PackageNameDotOpt -> DOT
Rule 223   PackageNameDotOpt -> PackageName
Rule 224   PackageNameDotOpt -> epsilon
Rule 225   ImportPath -> STRING
Rule 226   epsilon -> <empty>

Terminals, with rules where they appear

AND                  : 132 141
AND_ASSIGN           : 176
ASSIGN               : 52 70 71 181
BOOL_T               : 12
BREAK                : 205
CASE                 : 192
COLON                : 109 110 110 164 191
COMMA                : 35 36 54 57
COMPLEX_T            : 10
CONST                : 48 49
CONTINUE             : 206
DECR                 : 168
DEFAULT              : 193
DIVIDE               : 125
DIVIDE_ASSIGN        : 174
DOT                  : 100 108 111 222
ELSE                 : 183 184
EQUALS               : 117
FLOAT                : 90
FLOAT_T              : 8
FOR                  : 194
FUNC                 : 74 75
GOTO                 : 209
GREATER              : 120
HEX                  : 89
IDENTIFIER           : 14 53 54 64 73 79 99 100 108 165 216
IF                   : 182
IMAGINARY            : 91
IMPORT               : 217 218
INCR                 : 167
INTEGER              : 87
INT_T                : 7
LCURL                : 23 39 187
LESSER               : 119
LESS_EQUALS          : 121
LOGICAL_AND          : 116
LOGICAL_OR           : 115
LPAREN               : 4 30 49 60 66 85 107 111 142 218
LSHIFT               : 127
LSHIFT_ASSIGN        : 179
LSQUARE              : 20 104 109 110
MINUS                : 130 139
MINUS_ASSIGN         : 172
MOD                  : 126
MOD_ASSIGN           : 175
MORE_EQUALS          : 122
NOT                  : 137
NOT_ASSIGN           : 118
OCTAL                : 88
OR                   : 123
OR_ASSIGN            : 177
PACKAGE              : 215
PD                   : 156
PLUS                 : 129 138
PLUS_ASSIGN          : 171
PRINT                : 156 157
PS                   : 157
QUICK_ASSIGN         : 73
RCURL                : 23 39 187
RETURN               : 202
RPAREN               : 4 30 49 60 66 85 107 111 142 218
RSHIFT               : 128
RSHIFT_ASSIGN        : 180
RSQUARE              : 20 104 109 110
RUNE                 : 92
RUNE_T               : 11
SCAN                 : 158
SEMICOLON            : 24 41 50 61 67 199 199 210 212 213 219
STAR                 : 27 131 140
STAR_ASSIGN          : 173
STRING               : 93 225
STRING_T             : 13
STRUCT               : 23
SWITCH               : 187
TYPE                 : 14 59 60
TYPECAST             : 142
UINT_T               : 9
VAR                  : 65 66
XOR                  : 124
XOR_ASSIGN           : 178
error                : 

Nonterminals, with rules where they appear

ArrayLength          : 20
ArrayType            : 15
AssignOp             : 170
Assignment           : 162
BaseType             : 27
BasicLit             : 86
Block                : 82 150 182 184 194
BreakStmt            : 147
C                    : 91
Condition            : 196 201
ConditionBlockOpt    : 194
ConditionOpt         : 199
ConstDecl            : 43
ConstSpec            : 48 50
ConstSpecRep         : 49 50
ContinueStmt         : 148
Conversion           : 103
CreateFuncScope      : 23
CreateScope          : 74 75 150 182 184 187 194
Declaration          : 46 143
ElementType          : 20
ElseOpt              : 182
EndScope             : 23 74 75 150 182 184 187 194
ExprCaseClause       : 189
ExprCaseClauseRep    : 187 189
ExprSwitchCase       : 191
ExprSwitchStmt       : 186
Expression           : 21 56 57 73 85 104 110 110 115 115 116 116 117 117 118 118 119 119 120 120 121 121 122 122 123 123 124 124 125 125 126 126 127 127 128 128 129 129 130 130 131 131 132 132 133 142 156 157 158 166 167 168 182 187 192 198 203
ExpressionList       : 52 70 71 112 169 169
ExpressionListOpt    : 69
ExpressionListTypeOpt : 107
ExpressionOpt        : 109 109 110
ExpressionPureOpt    : 202
ExpressionRep        : 56 57
ExpressionStmt       : 160
F                    : 90
FieldDecl            : 24
FieldDeclRep         : 23 24
ForClause            : 197
ForStmt              : 153
Function             : 74
FunctionBody         : 80
FunctionDecl         : 47
FunctionName         : 74 75
GotoStmt             : 149
I                    : 87 88 89
IdentifierList       : 26 37 52 69 70
IdentifierRep        : 53 54
IfStmt               : 151 183
ImportDecl           : 212
ImportDeclRep        : 210 212
ImportPath           : 221
ImportSpec           : 217 219
ImportSpecRep        : 218 219
IncDecStmt           : 161
Label                : 164 207 209
LabelOpt             : 205 206
LabeledStmt          : 144
Literal              : 83
Operand              : 101
OperandName          : 84
PackageClause        : 210
PackageName          : 215 223
PackageNameDotOpt    : 221
ParameterDecl        : 33 35 36 36
ParameterDeclCommaRep : 34 35
ParameterListOpt     : 30
Parameters           : 29
ParametersList       : 31
PointerType          : 17
PrimaryExpr          : 102 104 105 106 107 135
PrintStmt            : 154
QualifiedIdent       : 6
R                    : 92
ReturnStmt           : 146
S                    : 93
ScanStmt             : 155
Selector             : 102
ShortVarDecl         : 163
Signature            : 75 80
SimpleStmt           : 145 199 199
Slice                : 105
SourceFile           : 1
StartSwitch          : 187
Statement            : 41 164
StatementList        : 39 191
StatementRep         : 40 41
StructType           : 16
SwitchStmt           : 152
TopLevelDecl         : 213
TopLevelDeclRep      : 210 213
Type                 : 4 18 22 26 28 37 38 52 64 69 111 142
TypeAssertion        : 106
TypeDecl             : 44
TypeDef              : 63
TypeLit              : 3
TypeName             : 2 100
TypeOpt              : 29
TypeSpec             : 59 61
TypeSpecRep          : 60 61
TypeToken            : 5
UnaryExpr            : 114 136 137
UnaryOp              : 136
VarDecl              : 45
VarSpec              : 65 67
VarSpecRep           : 66 67
assign_op            : 169
epsilon              : 19 25 32 42 51 55 58 62 68 72 113 134 159 185 190 195 200 204 208 211 214 220 224
funMark              : 80
start                : 0

Parsing method: LALR

state 0

    (0) S' -> . start
    (1) start -> . SourceFile
    (210) SourceFile -> . PackageClause SEMICOLON ImportDeclRep TopLevelDeclRep
    (215) PackageClause -> . PACKAGE PackageName

    PACKAGE         shift and go to state 4

    start                          shift and go to state 1
    SourceFile                     shift and go to state 2
    PackageClause                  shift and go to state 3

state 1

    (0) S' -> start .



state 2

    (1) start -> SourceFile .

    $end            reduce using rule 1 (start -> SourceFile .)


state 3

    (210) SourceFile -> PackageClause . SEMICOLON ImportDeclRep TopLevelDeclRep

    SEMICOLON       shift and go to state 5


state 4

    (215) PackageClause -> PACKAGE . PackageName
    (216) PackageName -> . IDENTIFIER

    IDENTIFIER      shift and go to state 7

    PackageName                    shift and go to state 6

state 5

    (210) SourceFile -> PackageClause SEMICOLON . ImportDeclRep TopLevelDeclRep
    (211) ImportDeclRep -> . epsilon
    (212) ImportDeclRep -> . ImportDeclRep ImportDecl SEMICOLON
    (226) epsilon -> .

    IMPORT          reduce using rule 226 (epsilon -> .)
    FUNC            reduce using rule 226 (epsilon -> .)
    CONST           reduce using rule 226 (epsilon -> .)
    TYPE            reduce using rule 226 (epsilon -> .)
    VAR             reduce using rule 226 (epsilon -> .)
    $end            reduce using rule 226 (epsilon -> .)

    ImportDeclRep                  shift and go to state 8
    epsilon                        shift and go to state 9

state 6

    (215) PackageClause -> PACKAGE PackageName .

    SEMICOLON       reduce using rule 215 (PackageClause -> PACKAGE PackageName .)


state 7

    (216) PackageName -> IDENTIFIER .

    SEMICOLON       reduce using rule 216 (PackageName -> IDENTIFIER .)
    STRING          reduce using rule 216 (PackageName -> IDENTIFIER .)


state 8

    (210) SourceFile -> PackageClause SEMICOLON ImportDeclRep . TopLevelDeclRep
    (212) ImportDeclRep -> ImportDeclRep . ImportDecl SEMICOLON
    (213) TopLevelDeclRep -> . TopLevelDeclRep TopLevelDecl SEMICOLON
    (214) TopLevelDeclRep -> . epsilon
    (217) ImportDecl -> . IMPORT ImportSpec
    (218) ImportDecl -> . IMPORT LPAREN ImportSpecRep RPAREN
    (226) epsilon -> .

    IMPORT          shift and go to state 13
    FUNC            reduce using rule 226 (epsilon -> .)
    CONST           reduce using rule 226 (epsilon -> .)
    TYPE            reduce using rule 226 (epsilon -> .)
    VAR             reduce using rule 226 (epsilon -> .)
    $end            reduce using rule 226 (epsilon -> .)

    TopLevelDeclRep                shift and go to state 10
    ImportDecl                     shift and go to state 11
    epsilon                        shift and go to state 12

state 9

    (211) ImportDeclRep -> epsilon .

    IMPORT          reduce using rule 211 (ImportDeclRep -> epsilon .)
    FUNC            reduce using rule 211 (ImportDeclRep -> epsilon .)
    CONST           reduce using rule 211 (ImportDeclRep -> epsilon .)
    TYPE            reduce using rule 211 (ImportDeclRep -> epsilon .)
    VAR             reduce using rule 211 (ImportDeclRep -> epsilon .)
    $end            reduce using rule 211 (ImportDeclRep -> epsilon .)


state 10

    (210) SourceFile -> PackageClause SEMICOLON ImportDeclRep TopLevelDeclRep .
    (213) TopLevelDeclRep -> TopLevelDeclRep . TopLevelDecl SEMICOLON
    (46) TopLevelDecl -> . Declaration
    (47) TopLevelDecl -> . FunctionDecl
    (43) Declaration -> . ConstDecl
    (44) Declaration -> . TypeDecl
    (45) Declaration -> . VarDecl
    (74) FunctionDecl -> . FUNC FunctionName CreateScope Function EndScope
    (75) FunctionDecl -> . FUNC FunctionName CreateScope Signature EndScope
    (48) ConstDecl -> . CONST ConstSpec
    (49) ConstDecl -> . CONST LPAREN ConstSpecRep RPAREN
    (59) TypeDecl -> . TYPE TypeSpec
    (60) TypeDecl -> . TYPE LPAREN TypeSpecRep RPAREN
    (65) VarDecl -> . VAR VarSpec
    (66) VarDecl -> . VAR LPAREN VarSpecRep RPAREN

    $end            reduce using rule 210 (SourceFile -> PackageClause SEMICOLON ImportDeclRep TopLevelDeclRep .)
    FUNC            shift and go to state 20
    CONST           shift and go to state 21
    TYPE            shift and go to state 22
    VAR             shift and go to state 23

    TopLevelDecl                   shift and go to state 14
    Declaration                    shift and go to state 15
    FunctionDecl                   shift and go to state 16
    ConstDecl                      shift and go to state 17
    TypeDecl                       shift and go to state 18
    VarDecl                        shift and go to state 19

state 11

    (212) ImportDeclRep -> ImportDeclRep ImportDecl . SEMICOLON

    SEMICOLON       shift and go to state 24


state 12

    (214) TopLevelDeclRep -> epsilon .

    FUNC            reduce using rule 214 (TopLevelDeclRep -> epsilon .)
    CONST           reduce using rule 214 (TopLevelDeclRep -> epsilon .)
    TYPE            reduce using rule 214 (TopLevelDeclRep -> epsilon .)
    VAR             reduce using rule 214 (TopLevelDeclRep -> epsilon .)
    $end            reduce using rule 214 (TopLevelDeclRep -> epsilon .)


state 13

    (217) ImportDecl -> IMPORT . ImportSpec
    (218) ImportDecl -> IMPORT . LPAREN ImportSpecRep RPAREN
    (221) ImportSpec -> . PackageNameDotOpt ImportPath
    (222) PackageNameDotOpt -> . DOT
    (223) PackageNameDotOpt -> . PackageName
    (224) PackageNameDotOpt -> . epsilon
    (216) PackageName -> . IDENTIFIER
    (226) epsilon -> .

    LPAREN          shift and go to state 26
    DOT             shift and go to state 28
    IDENTIFIER      shift and go to state 7
    STRING          reduce using rule 226 (epsilon -> .)

    ImportSpec                     shift and go to state 25
    PackageNameDotOpt              shift and go to state 27
    PackageName                    shift and go to state 29
    epsilon                        shift and go to state 30

state 14

    (213) TopLevelDeclRep -> TopLevelDeclRep TopLevelDecl . SEMICOLON

    SEMICOLON       shift and go to state 31


state 15

    (46) TopLevelDecl -> Declaration .

    SEMICOLON       reduce using rule 46 (TopLevelDecl -> Declaration .)


state 16

    (47) TopLevelDecl -> FunctionDecl .

    SEMICOLON       reduce using rule 47 (TopLevelDecl -> FunctionDecl .)


state 17

    (43) Declaration -> ConstDecl .

    SEMICOLON       reduce using rule 43 (Declaration -> ConstDecl .)


state 18

    (44) Declaration -> TypeDecl .

    SEMICOLON       reduce using rule 44 (Declaration -> TypeDecl .)


state 19

    (45) Declaration -> VarDecl .

    SEMICOLON       reduce using rule 45 (Declaration -> VarDecl .)


state 20

    (74) FunctionDecl -> FUNC . FunctionName CreateScope Function EndScope
    (75) FunctionDecl -> FUNC . FunctionName CreateScope Signature EndScope
    (79) FunctionName -> . IDENTIFIER

    IDENTIFIER      shift and go to state 33

    FunctionName                   shift and go to state 32

state 21

    (48) ConstDecl -> CONST . ConstSpec
    (49) ConstDecl -> CONST . LPAREN ConstSpecRep RPAREN
    (52) ConstSpec -> . IdentifierList Type ASSIGN ExpressionList
    (53) IdentifierList -> . IDENTIFIER IdentifierRep

    LPAREN          shift and go to state 35
    IDENTIFIER      shift and go to state 37

    ConstSpec                      shift and go to state 34
    IdentifierList                 shift and go to state 36

state 22

    (59) TypeDecl -> TYPE . TypeSpec
    (60) TypeDecl -> TYPE . LPAREN TypeSpecRep RPAREN
    (63) TypeSpec -> . TypeDef
    (64) TypeDef -> . IDENTIFIER Type

    LPAREN          shift and go to state 39
    IDENTIFIER      shift and go to state 41

    TypeSpec                       shift and go to state 38
    TypeDef                        shift and go to state 40

state 23

    (65) VarDecl -> VAR . VarSpec
    (66) VarDecl -> VAR . LPAREN VarSpecRep RPAREN
    (69) VarSpec -> . IdentifierList Type ExpressionListOpt
    (70) VarSpec -> . IdentifierList ASSIGN ExpressionList
    (53) IdentifierList -> . IDENTIFIER IdentifierRep

    LPAREN          shift and go to state 43
    IDENTIFIER      shift and go to state 37

    VarSpec                        shift and go to state 42
    IdentifierList                 shift and go to state 44

state 24

    (212) ImportDeclRep -> ImportDeclRep ImportDecl SEMICOLON .

    IMPORT          reduce using rule 212 (ImportDeclRep -> ImportDeclRep ImportDecl SEMICOLON .)
    FUNC            reduce using rule 212 (ImportDeclRep -> ImportDeclRep ImportDecl SEMICOLON .)
    CONST           reduce using rule 212 (ImportDeclRep -> ImportDeclRep ImportDecl SEMICOLON .)
    TYPE            reduce using rule 212 (ImportDeclRep -> ImportDeclRep ImportDecl SEMICOLON .)
    VAR             reduce using rule 212 (ImportDeclRep -> ImportDeclRep ImportDecl SEMICOLON .)
    $end            reduce using rule 212 (ImportDeclRep -> ImportDeclRep ImportDecl SEMICOLON .)


state 25

    (217) ImportDecl -> IMPORT ImportSpec .

    SEMICOLON       reduce using rule 217 (ImportDecl -> IMPORT ImportSpec .)


state 26

    (218) ImportDecl -> IMPORT LPAREN . ImportSpecRep RPAREN
    (219) ImportSpecRep -> . ImportSpecRep ImportSpec SEMICOLON
    (220) ImportSpecRep -> . epsilon
    (226) epsilon -> .

    RPAREN          reduce using rule 226 (epsilon -> .)
    DOT             reduce using rule 226 (epsilon -> .)
    IDENTIFIER      reduce using rule 226 (epsilon -> .)
    STRING          reduce using rule 226 (epsilon -> .)

    ImportSpecRep                  shift and go to state 45
    epsilon                        shift and go to state 46

state 27

    (221) ImportSpec -> PackageNameDotOpt . ImportPath
    (225) ImportPath -> . STRING

    STRING          shift and go to state 48

    ImportPath                     shift and go to state 47

state 28

    (222) PackageNameDotOpt -> DOT .

    STRING          reduce using rule 222 (PackageNameDotOpt -> DOT .)


state 29

    (223) PackageNameDotOpt -> PackageName .

    STRING          reduce using rule 223 (PackageNameDotOpt -> PackageName .)


state 30

    (224) PackageNameDotOpt -> epsilon .

    STRING          reduce using rule 224 (PackageNameDotOpt -> epsilon .)


state 31

    (213) TopLevelDeclRep -> TopLevelDeclRep TopLevelDecl SEMICOLON .

    FUNC            reduce using rule 213 (TopLevelDeclRep -> TopLevelDeclRep TopLevelDecl SEMICOLON .)
    CONST           reduce using rule 213 (TopLevelDeclRep -> TopLevelDeclRep TopLevelDecl SEMICOLON .)
    TYPE            reduce using rule 213 (TopLevelDeclRep -> TopLevelDeclRep TopLevelDecl SEMICOLON .)
    VAR             reduce using rule 213 (TopLevelDeclRep -> TopLevelDeclRep TopLevelDecl SEMICOLON .)
    $end            reduce using rule 213 (TopLevelDeclRep -> TopLevelDeclRep TopLevelDecl SEMICOLON .)


state 32

    (74) FunctionDecl -> FUNC FunctionName . CreateScope Function EndScope
    (75) FunctionDecl -> FUNC FunctionName . CreateScope Signature EndScope
    (77) CreateScope -> .

    LPAREN          reduce using rule 77 (CreateScope -> .)

    CreateScope                    shift and go to state 49

state 33

    (79) FunctionName -> IDENTIFIER .

    LPAREN          reduce using rule 79 (FunctionName -> IDENTIFIER .)


state 34

    (48) ConstDecl -> CONST ConstSpec .

    SEMICOLON       reduce using rule 48 (ConstDecl -> CONST ConstSpec .)


state 35

    (49) ConstDecl -> CONST LPAREN . ConstSpecRep RPAREN
    (50) ConstSpecRep -> . ConstSpecRep ConstSpec SEMICOLON
    (51) ConstSpecRep -> . epsilon
    (226) epsilon -> .

    RPAREN          reduce using rule 226 (epsilon -> .)
    IDENTIFIER      reduce using rule 226 (epsilon -> .)

    ConstSpecRep                   shift and go to state 50
    epsilon                        shift and go to state 51

state 36

    (52) ConstSpec -> IdentifierList . Type ASSIGN ExpressionList
    (2) Type -> . TypeName
    (3) Type -> . TypeLit
    (4) Type -> . LPAREN Type RPAREN
    (5) TypeName -> . TypeToken
    (6) TypeName -> . QualifiedIdent
    (15) TypeLit -> . ArrayType
    (16) TypeLit -> . StructType
    (17) TypeLit -> . PointerType
    (7) TypeToken -> . INT_T
    (8) TypeToken -> . FLOAT_T
    (9) TypeToken -> . UINT_T
    (10) TypeToken -> . COMPLEX_T
    (11) TypeToken -> . RUNE_T
    (12) TypeToken -> . BOOL_T
    (13) TypeToken -> . STRING_T
    (14) TypeToken -> . TYPE IDENTIFIER
    (100) QualifiedIdent -> . IDENTIFIER DOT TypeName
    (20) ArrayType -> . LSQUARE ArrayLength RSQUARE ElementType
    (23) StructType -> . CreateFuncScope STRUCT LCURL FieldDeclRep RCURL EndScope
    (27) PointerType -> . STAR BaseType
    (76) CreateFuncScope -> .

    LPAREN          shift and go to state 55
    INT_T           shift and go to state 61
    FLOAT_T         shift and go to state 62
    UINT_T          shift and go to state 63
    COMPLEX_T       shift and go to state 64
    RUNE_T          shift and go to state 65
    BOOL_T          shift and go to state 66
    STRING_T        shift and go to state 67
    TYPE            shift and go to state 68
    IDENTIFIER      shift and go to state 69
    LSQUARE         shift and go to state 70
    STAR            shift and go to state 72
    STRUCT          reduce using rule 76 (CreateFuncScope -> .)

    Type                           shift and go to state 52
    TypeName                       shift and go to state 53
    TypeLit                        shift and go to state 54
    TypeToken                      shift and go to state 56
    QualifiedIdent                 shift and go to state 57
    ArrayType                      shift and go to state 58
    StructType                     shift and go to state 59
    PointerType                    shift and go to state 60
    CreateFuncScope                shift and go to state 71

state 37

    (53) IdentifierList -> IDENTIFIER . IdentifierRep
    (54) IdentifierRep -> . IdentifierRep COMMA IDENTIFIER
    (55) IdentifierRep -> . epsilon
    (226) epsilon -> .

    COMMA           reduce using rule 226 (epsilon -> .)
    LPAREN          reduce using rule 226 (epsilon -> .)
    INT_T           reduce using rule 226 (epsilon -> .)
    FLOAT_T         reduce using rule 226 (epsilon -> .)
    UINT_T          reduce using rule 226 (epsilon -> .)
    COMPLEX_T       reduce using rule 226 (epsilon -> .)
    RUNE_T          reduce using rule 226 (epsilon -> .)
    BOOL_T          reduce using rule 226 (epsilon -> .)
    STRING_T        reduce using rule 226 (epsilon -> .)
    TYPE            reduce using rule 226 (epsilon -> .)
    IDENTIFIER      reduce using rule 226 (epsilon -> .)
    LSQUARE         reduce using rule 226 (epsilon -> .)
    STAR            reduce using rule 226 (epsilon -> .)
    STRUCT          reduce using rule 226 (epsilon -> .)
    ASSIGN          reduce using rule 226 (epsilon -> .)

    IdentifierRep                  shift and go to state 73
    epsilon                        shift and go to state 74
